5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1708_3032.log
== TEST (2019-04-29 14:22:43) 
-- CODE:
from math import*
x=abs(input("valor: "))

exp = x**(1/n)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=abs(input())
TypeError: bad operand type for abs(): 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:23:00) 
-- CODE:
from math import*
x=int(input("valor: "))

exp = x**(1/n)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '0.57'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:23:15) 
-- CODE:
from math import*
x=float(input("valor: "))

exp = x**(1/n)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    exp = x**(1/n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:34) 
-- CODE:
from math import*

x=float(input("valor: "))

exp = x**(1/2)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    exp = x**(1/n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:25:46) 
-- CODE:
from math import*

x=float(input("valor: "))

exp = x**(1/2)



-- EXECUTION TIME:
0.192081
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:

-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:

-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:26:01) 
-- CODE:
from math import*

x=float(input("valor: "))

exp = x**(1/2)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    exp = x**(1/n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:22) 
-- CODE:
from math import*

x=float(input("valor: "))
print(x)

if(x<=0):
	print("x")
if(0<x<=1):
	print(1)



-- OUTPUT:
0.57
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:36:29) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(exp)

if(x < 4 or x <= 0):
	print("x")
if(0<x<=1):
	print(1)



-- OUTPUT:
0.18999999999999997
x
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:36:59) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x < 4 or x <= 0):
	print("x")
if(0<x<=1):
	print(1)



-- OUTPUT:
0.19
x
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:14) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x < 4 or x <= 0):
	print("exp")
if(0<x<=1):
	print(1)



-- OUTPUT:
0.19
exp
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:30) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x < 4 or x <= 0):




-- ERROR:
File "XXXX", line 11
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:36) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x < 4 or x <= 0):

-- ERROR:
File "XXXX", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:41) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x < 4 or x <= 0):
-- ERROR:
File "XXXX", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:23) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x < 4 or x <= 0):
	print(round(exp,4))
-- OUTPUT:
0.19
0.19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:36) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/5
print(round(exp,4))

if(x < 4 or x <= 0):
	print(round(exp,4))
-- OUTPUT:
0.114
0.114
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:54) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/0.5
print(round(exp,4))

if(x < 4 or x <= 0):
	print(round(exp,4))
-- OUTPUT:
1.14
1.14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:40:03) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/0.2
print(round(exp,4))

if(x < 4 or x <= 0):
	print(round(exp,4))
-- OUTPUT:
2.85
2.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:13) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x < 4 or x <= 0):
	print(round(exp,4))
-- OUTPUT:
0.19
0.19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:48) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x >2):
	print(round(exp,4))
-- OUTPUT:
0.19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:43:54) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x > 0):
	print(round(exp,4))
-- OUTPUT:
0.19
0.19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:44:00) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x > 0):
	print(round(exp,4))
-- EXECUTION TIME:
0.147475
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
0.19
0.19
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
0.6633
0.6633
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
0.67
0.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:05) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x > 0):
	print(exp)
if(0 < x <= 1):
	print(exp)
-- OUTPUT:
0.19
0.18999999999999997
0.18999999999999997
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:30) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x > 0):
	print(exp,4)
if(0 < x <= 1):
	print(exp,4)
-- OUTPUT:
0.19
0.18999999999999997 4
0.18999999999999997 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:55) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x > 0):
	print(round(exp,4))
if(0 < x <= 1):
	print(round(exp,4))
-- OUTPUT:
0.19
0.19
0.19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:46:12) 
-- CODE:
from math import*

x=float(input("valor: "))
exp = x**1/3
print(round(exp,4))

if(x > 0):
	print(round(exp,4))
if(0 < x <= 1):
	print(round(exp,4))
-- OUTPUT:
0.19
0.19
0.19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
